resources/tests/invalid_syntax/fn_decl.ct
//Error:
//2
fn()
{
  a; //<-error
}

fn he: 10 + 10u32; //<-error